Move photos to another directory

--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -19,7 +19,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
@@ -43,7 +43,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | Feedback&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | Feedback&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -72,7 +72,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -137,7 +137,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                         <div class="col">
                             <!--Set card max width and configuration of card using bootstrap class-->
                             <div class="card text-dark bg-light mb-3 maxwidth" >
-                                <div class="card-header"><img src="../profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan</div>
+                                <div class="card-header"><img src="../photo/profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan</div>
                                 <div class="card-body">
                                     <p class="card-text">Excellent Website,I am so impressed by the design and layout of it.</p>
                                 </div>
@@ -150,7 +150,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                             <div class="card text-dark bg-light mb-3 maxwidth" >
 
                                 <div class="card-header">
-                                    <img src="../feedback/jiachengprofilepic.jpg"   class="rounded me-2 profilepicsizing" alt="Image of JiaCheng's profile picture">Jia Cheng</div>
+                                    <img src="../photo/feedback/jiachengprofilepic.jpg"   class="rounded me-2 profilepicsizing" alt="Image of JiaCheng's profile picture">Jia Cheng</div>
                                 <div class="card-body">
 
                                     <p class="card-text">This is the first website that have extremely amazed me,I never visit such a nice one</p>
@@ -171,7 +171,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <p>All feedback written will be shown at the wall above<br>Write your first feedback today!!</p>
                     <!--Slide down button *Smooth scrolll had been enabled throughout-->
                     <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-                    <img  onclick="window.location.href='feedback.html#feedbackform'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
+                    <img  onclick="window.location.href='feedback.html#feedbackform'" src="../photo/arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
                 </div>
             </div>
             </div>
@@ -532,7 +532,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Start of the right section of the first section (Occupy 6 grid too)-->
         <div class="col-sm-12 col-lg-6 text-end  ">
             <!--A image taken from https://www.clipartmax.com/middle/m2H7G6A0d3H7H7i8_feedback-clipart-enquiry-feedback-flat-icon-png/ -->
-            <img src="../feedback/feedback.png" alt="Image of feedback" class="height400">
+            <img src="../photo/feedback/feedback.png" alt="Image of feedback" class="height400">
         </div>
     </div>
 </div>
@@ -543,7 +543,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="sucessfd" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
+            <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
@@ -562,7 +562,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
+            <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
