--- a/html-files/future.html
+++ b/html-files/future.html
@@ -19,7 +19,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <!---Set website description for search engine-->
     <meta name="name" content="ZhuoFan">
@@ -44,7 +44,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"  alt="Image of ZhuoFan's profile picture">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"  alt="Image of ZhuoFan's profile picture">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -73,7 +73,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -137,7 +137,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div class="container rocket" id="rocket">
                         <div id="innerrocket">
                             <!--Image taken from https://www.pinclipart.com/maxpin/iiomi/ -->
-                            <img alt="Image of rocket" src="../prospectphoto/rocket.png" class="width50"  >
+                            <img alt="Image of rocket" src="../photo/prospectphoto/rocket.png" class="width50"  >
                             <div class="" id="line"></div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <p>View my current course and my future prospect.</p>
                    <!--Downward arrow-->
                     <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-                    <img  onclick="window.location.href='future.html#daaareflection';" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
+                    <img  onclick="window.location.href='future.html#daaareflection';" src="../photo/arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
 
                 </div>
             </div>
@@ -185,7 +185,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!-- Occupy right half of line for screen above medium,full line for small-->
         <div class="col-md-6 col-sm-12 text-end " >
             <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
-            <img alt="Image of DAAA Course Info" src="../spphoto/daaacourseinfo.jpg"  class="daaaphoto img-fluid">
+            <img alt="Image of DAAA Course Info" src="../photo/spphoto/daaacourseinfo.jpg"  class="daaaphoto img-fluid">
 
         </div>
     </div>
@@ -202,7 +202,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div id="card1font">
                         <!--Front side of card-->
                         <!--Preview images on top of card-->
-                        <img src="../spphoto/singaporepolytechnicfrontview.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
+                        <img src="../photo/spphoto/singaporepolytechnicfrontview.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
                         <div class="card-body">
                             <h3 class="card-title">First Impression</h3>
                         </div>
@@ -213,7 +213,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                             <!--Center icon and text-->
                             <div class="text-center">
                                 <!-- Icon from https://github.com/icons8/flat-color-icons-->
-                                <img src="../cardicons/landscape.svg" alt="A icon showing landscape" class="cardimagestyle">
+                                <img src="../photo/cardicons/landscape.svg" alt="A icon showing landscape" class="cardimagestyle">
                                 <p><strong>When I first walked into SP on 14 April 2021 for the <span class="royalblue">freshman orientation program</span>, I was actually  <span class="mediumgreen">kind of excited </span> to meet new people and see new things.</strong></p>
                             </div>
                             <div class="col text-center">
@@ -230,7 +230,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Front side of card-->
                     <div id="card2font">
                         <!--Peeview image at top-->
-                        <img src="../spphoto/daaaclassphoto.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
+                        <img src="../photo/spphoto/daaaclassphoto.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
                         <div class="card-body">
                             <h3 class="card-title">My Classmates</h3>
                         </div>
@@ -240,7 +240,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                         <div class="container row aligncard">
                             <div class="text-center">
                                 <!--Icon from https://github.com/icons8/flat-color-icons-->
-                                <img src="../cardicons/collaboration.svg" alt="A icon showing collaborations" class="cardimagestyle">
+                                <img src="../photo/cardicons/collaboration.svg" alt="A icon showing collaborations" class="cardimagestyle">
                                 <p><strong>My classmates all come from <span class="orange">different backgrounds</span>.For some of them,we have <span class="red">already</span> knew each other previously.Know more about how my classmates are.</strong></p>
 
                             </div>
@@ -278,7 +278,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class="col-sm-12 col-md-6 text-end">
             <!--Cloud Icon taken from https://iconscout.com/contributors/chamedesign" by Chameleon Design-->
             <!--Animation here imcorperate with javascript to show process of from grey to color-->
-            <img class="greyscale cloudsvg" alt="A image showing cloud computing" src="../prospectphoto/cloudcomputing.svg" id='cloud' >
+            <img class="greyscale cloudsvg" alt="A image showing cloud computing" src="../photo/prospectphoto/cloudcomputing.svg" id='cloud' >
         </div>
     </div>
 </div>
@@ -288,7 +288,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <!--Header:Profile pic + name +time-->
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+            <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
