--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -19,7 +19,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
@@ -43,7 +43,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan's profile picture">ZhuoFan | Secondary School</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan's profile picture">ZhuoFan | Secondary School</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -72,7 +72,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -144,26 +144,26 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!--Captions for different image while slideshow-->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Secondary One Orientation Programme 2019 ">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Secondary One Orientation Programme 2019 ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of 3 Opal Racial Harmony Day 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of 3 Opal Racial Harmony Day 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>3 Opal Racial Harmony Day 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of 15th Student Council Investiture 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of 15th Student Council Investiture 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="carouselphotosize d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="carouselphotosize d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
@@ -171,44 +171,44 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of SOOP 2019 Organising Committee">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of SOOP 2019 Organising Committee">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of National Day Celebration 2020">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of National Day Celebration 2020">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>National Day Celebration 2020</h5>
                     </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of Dinner of Meet The Parent Session 2020 ">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of Dinner of Meet The Parent Session 2020 ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Dinner of Meet The Parent Session 2020</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100 carouselphotosize img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of SLTC 2020 Facilitator Committee">
+                    <img src="../photo/secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 carouselphotosize img-fluid" alt="Image of SLTC 2020 Facilitator Committee">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Student Leader Training Camp 2020 <br>Facilitator Committee</h5>
                     </div>
@@ -238,7 +238,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <p>Swipe to know more</p>
             <!--Upon clicked ,slide to the first section-->
             <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-            <img  onclick="window.location.href='secondary.html#secreflection';" src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
+            <img  onclick="window.location.href='secondary.html#secreflection';" src="../photo/arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
         </div>
     </div>
 </div>
@@ -258,7 +258,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Corresponding images another half in First section-->
         <div class=" col-md-6 col-sm-12 text-end">
             <!--Image from https://favpng.com/png_view/dr-cap-and-diploma-graduation-graduation-ceremony-square-academic-cap-diploma-clip-art-png/Z6h5dtZh-->
-<img src="../secondaryschoolphoto/graduationcap.png" alt="Image of graduation caps" class="academiccap">
+<img src="../photo/secondaryschoolphoto/graduationcap.png" alt="Image of graduation caps" class="academiccap">
         </div>
 
     </div>
@@ -381,7 +381,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!--Photo at right occupying half of the line for medium size screen,and full line for small screen(next line)-->
             <div class="col-md-6 col-sm-12 text-end">
                 <!-- Dunearn Secondary School Logo from https://dunearnsec.moe.edu.sg/-->
-                <img src="../secondaryschoolphoto/dunearnsecondarylogo.png" alt="Image of Dunearn Secondary School logo" class="dunearnlogo">
+                <img src="../photo/secondaryschoolphoto/dunearnsecondarylogo.png" alt="Image of Dunearn Secondary School logo" class="dunearnlogo">
             </div>
         </div>
     </div>
@@ -394,7 +394,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="secwelcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
+            <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
