--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -19,7 +19,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
@@ -45,7 +45,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,7 +75,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -132,7 +132,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <div class="row text-center textfly">
             <div class="col-12 text-center">
                 <!-- Centered class photo wigth fade effect-->
-                <img alt="Image of DAAA Class Photo" class='greyscale daaacoverphoto img-fluid' id="daaaimg" src="../spphoto/daaaclassphoto.jpg" >
+                <img alt="Image of DAAA Class Photo" class='greyscale daaacoverphoto img-fluid' id="daaaimg" src="../photo/spphoto/daaaclassphoto.jpg" >
 
             </div>
             <div class="col-12 text-center">
@@ -141,7 +141,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <p>View first impressions and things about Singapore Polytechnic</p>
                <!--Arrow down to go next section-->
                 <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-                <img  onclick="window.location.href='sp.html#spsection1';" src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
+                <img  onclick="window.location.href='sp.html#spsection1';" src="../photo/arrowdown/arrowdown.svg" alt="Image of arrow down" class="square">
             </div>
         </div>
     </div>
@@ -161,13 +161,13 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div id="carouselfade"   class="spcarouselphoto1 carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div data-bs-interval="1700" class="carousel-item active">
-                        <img src="../spphoto/singaporepolytechnicfrontview.jpg"  class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Front">
+                        <img src="../photo/spphoto/singaporepolytechnicfrontview.jpg"  class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Front">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/walkway.jpg"   class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Walk Way">
+                        <img src="../photo/spphoto/walkway.jpg"   class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Walk Way">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/blockt21.jpg" class="d-block w-100 spcarouselphoto" alt="Image of Singapore Polytechnic T21 block">
+                        <img src="../photo/spphoto/blockt21.jpg" class="d-block w-100 spcarouselphoto" alt="Image of Singapore Polytechnic T21 block">
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6">
                 <!-- Icon from https://cdn.iconscout.com/icon/premium/png-512-thumb/study-2280013-1902258.png-->
 <!--Set image heightt to be 300px-->
-                <img src="../spphoto/study.svg" id="study"  alt="Image of studying" class="greyscale studysvg">
+                <img src="../photo/spphoto/study.svg" id="study"  alt="Image of studying" class="greyscale studysvg">
             </div>
             <!--Icon occupy right half of line for medium screen and larger,full line for  small screen-->
 <div class="col-sm-12 col-md-6 text-end">
@@ -220,7 +220,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6">
                 <!--Image of food-->
                 <!-- Image taken from https://www.google.com/url?sa=i&url=https%3A%2F%2Ficonscout.com%2Ficon%2Ffast-food-1851561&psig=AOvVaw2ALq-TrlopzTEroz0SIhtt&ust=1626397182807000&source=images&cd=vfe&ved=0CAsQjhxqFwoTCPiZn-Xv4_ECFQAAAAAdAAAAABAD-->
-<img src="../spphoto/food.svg"  id="food" alt="Image of Food" class="greyscale foodsvg">
+<img src="../photo/spphoto/food.svg"  id="food" alt="Image of Food" class="greyscale foodsvg">
             </div>
             <!-- Occupy right half of line for screen above medium and full line for small screen-->
 <div class="col-sm-12 col-md-6 text-end">
@@ -244,7 +244,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Singapore Polytechnic Logo-->
         <!-- Occupy right half of line for screen above medium and full line for small screen-->
         <div class="col-sm-12 col-md-6 text-end ">
-            <img src="../spphoto/singaporepolytechniclogo.png" alt="Image of Singapore Polytechnic logo" class="splogo">
+            <img src="../photo/spphoto/singaporepolytechniclogo.png" alt="Image of Singapore Polytechnic logo" class="splogo">
         </div>
     </div>
 </div>
@@ -254,7 +254,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <!--Header:Profile pic + name +time-->
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
+            <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
