--- a/html-files/about.html
+++ b/html-files/about.html
@@ -19,7 +19,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
@@ -45,7 +45,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -76,7 +76,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -143,7 +143,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <h1><span id="timegreeting"></span></h1>
                 <p>Welcome to about me page ,know more about me ! :)</p>
                 <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-                <img  onclick="window.location.href='about.html#aboutmeover'" src="../arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
+                <img  onclick="window.location.href='about.html#aboutmeover'" src="../photo/arrowdown/arrowdown.svg" alt="Icon of arrow down" class="square">
             </div>
             <!-- Script to determind time ,make animation and show greeting text-->
              <script src="../js/detecthouranimation.js"></script>
@@ -187,7 +187,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <!-- Occupy left half of line for screen above medium and full line for small screen-->
             <div class="col-md-6 col-sm-12">
                 <!--Photo imcorpoerate with javascript for fade effect-->
-<img src="../aboutmephoto/mesciencecenter.jpg" alt="Image of ZhuoFan at Science Center" id="photofly" class="textfly photoeffectabout img-fluid" >
+<img src="../photo/aboutmephoto/mesciencecenter.jpg" alt="Image of ZhuoFan at Science Center" id="photofly" class="textfly photoeffectabout img-fluid" >
             </div>
             <!-- Occupy right half of line for screen above medium and full line for small screen-->
             <div class="col-md-6 col-sm-12 text-end">
@@ -456,7 +456,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <!--Preview images on top of card-->
-                    <img src="../testimonialpdf/testimonial0preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
+                    <img src="../photo/testimonialpdf/testimonial0preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 1</h5>
                         <p class="card-text">Written by Dunearn Secondary School</p>
@@ -490,7 +490,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <!--Preview images on top of card-->
-                    <img src="../testimonialpdf/testimonial1preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
+                    <img src="../photo/testimonialpdf/testimonial1preview.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 2</h5>
                         <p class="card-text">Written by Ms Sarah Chan</p>
@@ -524,7 +524,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <!--Preview images on top of card-->
-                    <img src="../testimonialpdf/testimonial2preview.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
+                    <img src="../photo/testimonialpdf/testimonial2preview.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 3</h5>
                         <p class="card-text">Written by Ms Chua Sock Sian</p>
@@ -558,7 +558,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card h-100">
                     <!--Preview images on top of card-->
-                    <img src="../testimonialpdf/testimonial3preview.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
+                    <img src="../photo/testimonialpdf/testimonial3preview.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 4</h5>
                         <p class="card-text">Written by Mr Lee Kong Huat</p>
@@ -611,7 +611,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div class="row">
                         <!--Photo will occupy 7 grid in large device ,full line in small device-->
                         <div class="col-lg-7 col-sm-12 d-flex" >
-                            <img src="../aboutmephoto/contactcard.jpg" class="img-fluid"  alt="Image of Northeastern's park">
+                            <img src="../photo/aboutmephoto/contactcard.jpg" class="img-fluid"  alt="Image of Northeastern's park">
                         </div>
                         <!--The text :contact information will occupy 5 grid in large screen and above and full line in small screen-->
                         <div class="col-lg-5 col-sm-12" >
@@ -641,7 +641,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg" class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
+            <img src="../photo/profilepic/profile.jpg" class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
