--- a/html-files/index.html
+++ b/html-files/index.html
@@ -20,7 +20,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <!--Insert search keywords for search engine-->
     <meta name="keywords" content="ZhuoFan,sp,daaa,卓凡,ChenZhuofan,Chen,ZHUOFAN,CHEN">
     <!---Set page icon to appear at tab-->
-    <link rel="icon" href="../profilepic/profile.jpg"/>
+    <link rel="icon" href="../photo/profilepic/profile.jpg"/>
     <!---Set website description for search engine-->
     <meta name="description"  content="Personal Website | ZhuoFan | I am 17 years old this year.Currently a student studying in Singapore Polytechnic.I love to play badminton and to do coding<br>Click to know more about me:)">
     <meta name="name" content="ZhuoFan">
@@ -45,7 +45,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan | Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../photo/profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan | Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,7 +75,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Search button-->
                 <form class="d-flex">
                     <!--Search icon taken from https://www.clipartmax.com/middle/m2H7m2K9H7b1G6m2_computer-icons-google-search-clip-art-transprent-%E2%93%92-transparent-background-magnifying-glass/-->
-                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
+                    <img src="../photo/searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -136,7 +136,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
     <h3>My Experience in Poly and My Career Prospect</h3><br><br>
     <!--Upon clicked ,slide to the first section-->
     <!--Icon from BootStrap https://icons.getbootstrap.com/icons/arrow-down-square/-->
-    <img onclick="window.location.href='index.html#aboutmesum';"  src="../arrowdown/arrowdown.svg" alt="Image of arrow down" class="arrowdown">
+    <img onclick="window.location.href='index.html#aboutmesum';"  src="../photo/arrowdown/arrowdown.svg" alt="Image of arrow down" class="arrowdown">
 </div>
 
 <!--First section in Page-->
@@ -201,26 +201,26 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                    <!--Captions for different image while slideshow.Photo slideshow change every 2 second(2000ms)-->
                    <div class="carousel-inner">
                        <div class="carousel-item active" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 img-fluid" alt="Image of Secondary One Orientation Programme 2019 ">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/soop2019.jpg"  class="d-block w-100 img-fluid" alt="Image of Secondary One Orientation Programme 2019 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"   class="d-block w-100 img-fluid" alt="Image of 3 Opal Racial Harmony Day 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/3opalclassphoto.jpg"   class="d-block w-100 img-fluid" alt="Image of 3 Opal Racial Harmony Day 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>3 Opal Racial Harmony Day 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"   class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture.jpg"   class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/studentcouncilinvestiture2.jpg"  class="d-block w-100 img-fluid" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
@@ -228,44 +228,44 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"   class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019.jpg"   class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"  class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019overallphoto.jpg"  class="d-block w-100 img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"   class="d-block w-100 img-fluid" alt="Image of SOOP 2019 Organising Committee">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/soop2019organisingcommittee.jpg"   class="d-block w-100 img-fluid" alt="Image of SOOP 2019 Organising Committee">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 img-fluid" alt="Photo of National Day Celebration 2020 ">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/nationaldayphoto.jpg"   class="d-block w-100 img-fluid" alt="Photo of National Day Celebration 2020 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>National Day Celebration 2020</h5>
                            </div>
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 img-fluid" alt="Image of Dinner of Meet The Parent Session 2020">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/meettheparentdinner.jpg"   class="d-block w-100 img-fluid" alt="Image of Dinner of Meet The Parent Session 2020">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Dinner of Meet The Parent Session 2020</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100  img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/cnyperformance2019teamphoto.jpg"  class="d-block w-100  img-fluid" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 img-fluid" alt="Image of SLTC 2020 Facilitator Committee ">
+                           <img src="../photo/secondaryschoolphoto/presentationcarousel/sltc2020.jpg"   class="d-block w-100 img-fluid" alt="Image of SLTC 2020 Facilitator Committee ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Student Leader Training Camp 2020 <br>Facilitator Committee</h5>
                            </div>
@@ -322,7 +322,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Front side of card-->
       <div id="card1font">
           <!-- Image from https://mastermandarin.org/tag/education/ -->
-        <img src="../cardphoto/education.jpg" class="card-img-top" alt="Image of books">
+        <img src="../photo/cardphoto/education.jpg" class="card-img-top" alt="Image of books">
         <div class="card-body">
             <h3 class="card-title">Education Background</h3>
         </div>
@@ -332,7 +332,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="container row aligncard">
                 <div class="text-center">
                     <!-- Icon from https://github.com/icons8/flat-color-icons-->
-                    <img src="../cardicons/graduation_cap.svg" alt="Icon of graduation caps" class="cardimagestyle">
+                    <img src="../photo/cardicons/graduation_cap.svg" alt="Icon of graduation caps" class="cardimagestyle">
                     <p><strong>I am a student of <span class="yellowcolor"> Dunearn Secondary School</span> from 2017 to 2020 and currently a student of <span class="darkcyn">Singapore Polytechnic</span>. Know more about my experience.</strong></p>
                     <div class="col text-center">
                         <button type="button" class="btn btn-warning" onclick="window.location.href='secondary.html'">Dunearn Secondary</button>
@@ -350,7 +350,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Front side of card-->
           <div id="card3font">
               <!-- Image from https://6nomads.com/resources/remotetools/tproduct/250509661-285866365871-github-->
-            <img src="../cardphoto/github.png"  class="card-img-top githubimg" alt="Image of Github">
+            <img src="../photo/cardphoto/github.png"  class="card-img-top githubimg" alt="Image of Github">
             <div class="card-body">
                 <h3 class="card-title">My Github</h3>
             </div>
@@ -360,7 +360,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div  class="container row aligncard ">
     <div class="text-center">
        <!--Icon from https://github.com/icons8/flat-color-icons-->
-    <img src='../cardicons/command_line.svg' alt="Icon of command line" class="cardimagestyle">
+    <img src='../photo/cardicons/command_line.svg' alt="Icon of command line" class="cardimagestyle">
     <p><strong>I have use Github for couples of years.Mostly involved in <span class="springgreen">Android development</span> and <br> <span class="cornflowerblue"> C Language </span> projects.Take a look at some of my projects.</strong></p>
     </div>
                     <!--Center button-->
@@ -378,7 +378,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                <div id="card2font">
                    <!-- Image from https://www.execunet.com/category/career-center/market-info-and-trends/executive-market-intelligence-market-info-and-trends/page/2/
                    -->
-                <img src="../cardphoto/achievement.jpeg" class="card-img-top githubimg" alt="Image of Achievement">
+                <img src="../photo/cardphoto/achievement.jpeg" class="card-img-top githubimg" alt="Image of Achievement">
                 <div class="card-body">
                     <h3 class="card-title">Achievements</h3>
                 </div>
@@ -388,7 +388,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                     <div class="container row aligncard">
                         <div class="text-center">
                             <!-- Icon from https://github.com/icons8/flat-color-icons-->
-                            <img src="../cardicons/certificate.svg" alt="Icon of certificates" class="cardimagestyle">
+                            <img src="../photo/cardicons/certificate.svg" alt="Icon of certificates" class="cardimagestyle">
                             <p><strong>From 2017 to present,I have participated in a lot of Mathematics and Science competition like <span class="purplecolor">Australia Big Science Competition</span> and <br> <span class="pinkred">ICAS Mathematics Competition</span>.View more of my achievements here!</strong></p>
                         </div>
                         <div class="col text-center">
@@ -407,7 +407,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <!--Front side of card-->
              <div id="card4font">
                  <!--Image from Singapore Polytechnic Website ,https://www.sp.edu.sg/soc/courses/full-time-diplomas/data-analytics-and-artificial-intelligence-(ai)/overview-->
-                <img src="../cardphoto/daaacourseinfo.jpg"  class="card-img-top githubimg" alt="Image of DAAA course info">
+                <img src="../photo/cardphoto/daaacourseinfo.jpg"  class="card-img-top githubimg" alt="Image of DAAA course info">
                 <div class="card-body">
                     <h3 class="card-title">My Course</h3>
                 </div>
@@ -417,7 +417,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div class="container row aligncard">
                     <div class="text-center">
                         <!--Icon from https://github.com/icons8/flat-color-icons-->
-                        <img src="../cardicons/document.svg" alt="Icon of document" class="cardimagestyle">
+                        <img src="../photo/cardicons/document.svg" alt="Icon of document" class="cardimagestyle">
                         <p><strong>I am a AY2021 student in the course of <span class="golden">Diploma in Applied AI and Analytics</span>. School have started for a few months.Learn more about how my course is like.</strong></p>
 
                     </div>
@@ -438,7 +438,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
             <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
                 <div class="toast-header">
                     <!--Header:Profile pic + name +time-->
-                    <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
+                    <img src="../photo/profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
                     <strong class="mr-auto">ZhuoFan</strong>
 
                     <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
