--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -132,9 +132,9 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                 <div class="container feedbackwall" id="feedbackwall">
                    <br>
                     <!--Card items-->
-                    <!--Each card occupy 3 grid -->
-                    <div class="row row-cols-3 row-cols-md-3 " id="tr">
-                        <div class="col">
+                    <!--Each card occupy 12 grid for small ,6 for medium ,4 for large -->
+                    <div class="row " id="tr">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
                             <!--Set card max width and configuration of card using bootstrap class-->
                             <div class="card text-dark bg-light mb-3 maxwidth" >
                                 <div class="card-header"><img src="../photo/profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan</div>
@@ -146,7 +146,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="card text-dark bg-light mb-3 maxwidth" >
 
                                 <div class="card-header">
@@ -532,7 +532,7 @@ Github Commit :https://github.com/zhuofan-16/ST0501_FrontEnd_CA2_Project
         <!--Start of the right section of the first section (Occupy 6 grid too)-->
         <div class="col-sm-12 col-lg-6 text-end  ">
             <!--A image taken from https://www.clipartmax.com/middle/m2H7G6A0d3H7H7i8_feedback-clipart-enquiry-feedback-flat-icon-png/ -->
-            <img src="../photo/feedback/feedback.png" alt="Image of feedback" class="height400">
+            <img src="../photo/feedback/feedback.png" alt="Image of feedback" class="height400 img-fluid">
         </div>
     </div>
 </div>
